--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     </div>
                     <button type="submit" class="btn btn-default">Save</button>
                 </form>
+
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#" id="instruct">Instructions</a></li>
                     <li><a href="#" id="clear">Clear</a></li>
@@ -60,11 +61,18 @@
                         </ul>
                     </li>
                 </ul>
+
+                <form class="navbar-form navbar-right" action="#" onsubmit="jump()">
+                    <div class="form-group">
+                        <input type="text" id="jname" class="form-control" placeholder="Board to jump to">
+                    </div>
+                    <button type="submit" class="btn btn-default">Jump</button>
+                </form>
             </div>
         </div>
     </nav>
 
-    <iframe src="https://8ch.net/random.php" frameborder="0"></iframe>
+    <iframe src="http://8ch.net/random.php" frameborder="0"></iframe>
 
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -84,8 +92,8 @@
             } else {
                 var saves = Cookies.getJSON('saved_boards');
                 for (var i = 0; i < saves.length; i++) {
-                $(".boards").append(`<li>${saves[i]}</li>`);
-            }
+                    $(".boards").append(`<li>${saves[i]}</li>`);
+                }
             }
         }
 
@@ -103,10 +111,18 @@
             }
         }
 
+        function jump() {
+        var v = $('#jname').val();
+        var str = `https://8ch.net/${v}`;
+        $("iframe").attr('src', str);
+
+        }
+
         $("#next").click(function () {
+
             $("iframe").attr('src', ($('iframe').attr('src')));
         });
-        
+
         $("#clear").click(function () {
             Cookies.remove('saved_boards');
             location.reload();
