--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         $("#next").click(function () {
 
-            $("iframe").attr('src', ($('iframe').attr('src')));
+            $("iframe").attr('src', 'https://8ch.net/random.php');
         });
 
         $("#clear").click(function () {
