--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         }
 
         function jump() {
-        var v = $('#jname').val();
+        var v = $('#jname').val(" ");
+        $('#jname').val();
         var str = `https://8ch.net/${v}`;
         $("iframe").attr('src', str);
 
