--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         }
 
         function jump() {
-        var v = $('#jname').val(" ");
-        var str = `https://8ch.net/${v}/index.html`;
-        $("iframe").attr('src', str);
-        $('#jname').val(" ");
+            var v = $('#jname').val();
+            var str = `https://8ch.net/${v}/`;
+            $("iframe").attr('src', str);
+            $('#jname').val(" ");
         }
 
         $("#next").click(function () {
