--- a/privacy.html
+++ b/privacy.html
@@ -25,7 +25,7 @@
             Do you agree to the terms outlined above?
         </div>
         
-        <a href="/">Back</a>
+        <a href="/index.html">Back</a>
     
     </div>
 
