--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                             <li>
                                 <form class="navbar-form" onsubmit="jumpToBoard()" action="#">
                                     <div class="input-group">
-                                        <input type="text" class="form-control" id="input" placeholder="Board Name">
+                                        <input type="text" class="form-control" id="input" placeholder="Board Name" >
                                     </div>
                                 </form>
                             </li>
                         </ul>
                     </li>
 
-               <li><a href="https://kidbleach.info/" target="_blank" id="bleach"><span class="glyphicon glyphicon-eye-open"></span></a></li>
+               <li><a href="http://kidbleach.info/" target="_blank" id="bleach"><span class="glyphicon glyphicon-eye-open"></span></a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
